--- a/Lifestyle prediction using Ensemble Learning.ipynb
+++ b/Lifestyle prediction using Ensemble Learning.ipynb
@@ -4061,7 +4061,7 @@
       "outputs": [],
       "source": [
         "# submission = pd.DataFrame({'predictions': pred})\n",
-        "# submission.to_csv('submission_anindya.csv', index = False)"
+        "# submission.to_csv('jithu_j.csv', index = False)"
       ]
     },
     {
@@ -5262,7 +5262,7 @@
         "model.fit(X, y)\n",
         "pred = model.predict(imputed_test_df[num_cols + cat_cols])\n",
         "submission = pd.DataFrame({'predictions': pred})\n",
-        "submission.to_csv('submission_anindya.csv', index = False)"
+        "submission.to_csv('jithu_j.csv', index = False)"
       ]
     },
     {
